# sentinelnet

./: .gitignore  README.md
firmware/components/anomaly/: anomaly.c
firmware/components/anomaly/include/: anomaly.h
firmware/components/bft_consensus/: bft_consensus.c
firmware/components/bft_consensus/include/: bft_consensus.h
firmware/components/mesh_transport/: mesh_transport.c
firmware/components/mesh_transport/include/: mesh_transport.h
firmware/components/sensor_hal/: sensor_hal.c
firmware/components/sensor_hal/include/: sensor_hal.h
firmware/main/: main.c
sim/: CMakeLists.txt  main.c  sim.h
